--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 05:14:20
+lastsearch = 2024-07-20 05:39:07
 
 [demtot.com]
 match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
+url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -95.2%%
-title = Nệm lò xo Tuấn Anh có tốt không? Chọn loại đệm nào phù ...
-url = https://demxanh.com/nem-lo-xo-tuan-anh-co-tot-khong-chon-loai-dem-nao-phu-hop.html
+match = -33.3%%
+title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
+url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
 
 [maybedding.vn]
 match = 33.3%%
@@ -100,4 +100,9 @@ url = https://demre.com.vn/dem-lo-xo-techwood
 match = 19.0%%
 title = Đệm lò xo - chandemsadora.com
 url = https://chandemsadora.com/chan-ga-goi-dem-cac-hang-khac/dem-lo-xo/4
+
+[demhong.vn]
+match = -66.7%%
+title = Bảng giá khuyến mại đệm lò xo Techwood chất lượng cao!
+url = https://demhong.vn/dem-lo-xo-techwood/
 
