--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-20 04:18:41
+lastsearch = 2024-07-20 05:31:47
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -55,4 +55,9 @@ url = https://www.instagram.com/black_fdz/p/C0_e_CEvb16/
 match = -75.0%%
 title = Review: TUI Embraer E190 from Brussels to Dubrovnik
 url = https://theluxurytravelexpert.com/2021/07/14/review-tui-e190/
+
+[www.cruisecritic.co.uk]
+match = 0.0%%
+title = 
+url = https://www.cruisecritic.co.uk/cruise/marella/marella-voyager
 
