--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-19 23:17:01
+lastsearch = 2024-07-20 05:34:45
 
 [www.lazada.vn]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -167,9 +167,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://photonix.cn/cn/article/doi/10.1186/s43074-020-0001-6
 
 [sagatexvietnam.online]
-match = -16.7%%
-title = Vỏ Gối Khách Sạn 6 Sao - sagatex
-url = https://sagatexvietnam.online/product/bao-goi-cao-cap-mau-trang-vai-t500-100-cotton-sagatex-viet-nam/
+match = -138.9%%
+title = Vỏ Gối Khách Sạn 5 Sao, Vải 100%% Cotton Cao Cấp, Mềm Mại
+url = https://sagatexvietnam.online/product/vo-goi-mau-trang-vai-t400-100-cotton-sagatex-50cmx70cm/
 
 [www.thecooperativelogisticsnetwork.com]
 match = -38.9%%
