--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-20 04:28:00
+lastsearch = 2024-07-20 05:52:26
 
 [erado.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
-match = -110.0%%
-title = Bộ Chăn ga gối 4 món Cotton Poly dễ thương siêu mềm ...
-url = https://www.lazada.vn/products/bo-chan-ga-goi-4-mon-cotton-poly-de-thuong-sieu-mem-min-tham-hut-tot-drap-giuong-vo-goi-ga-giuong-du-size-i2188116701.html
+match = -5.0%%
+title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
 
 [fhomehatinh.com]
 match = -140.0%%
