--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-20 05:37:39
+lastsearch = 2024-07-20 05:45:24
 
 [www.instagram.com]
 match = -30.8%%
@@ -12,13 +12,13 @@ title = Yuki Chan (@yukichan_la)
 url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = 23.1%%
+title = Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
-match = -253.8%%
-title = Hoi Chan draws on scientific illustrations to create ...
+match = -307.7%%
+title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -223.1%%
-title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
-url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
+match = -107.7%%
+title = Yuki Chan - Hong Kong, Hong Kong SAR
+url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
