--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-20 04:18:29
+lastsearch = 2024-07-20 05:45:46
 
 [demxanh.com]
-match = 0.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 3.7%%
+title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
 
 [goni.vn]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [kyoryo.vn]
-match = 18.5%%
-title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+match = -40.7%%
+title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
+url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [suongtuyet.com]
 match = 18.5%%
