--- a/images/nem-dreamland-uc-120x190x09/config.ini
+++ b/images/nem-dreamland-uc-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-120x190x09.html
 lastopen = 2024-06-06 16:44:51
 
 [search]
-lastsearch = 2024-07-20 01:51:03
+lastsearch = 2024-07-20 05:48:27
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Dreamland
 url = https://www.michaelmarkowski.com/music/dreamland/
 
 [www.linkedin.com]
-match = -25.0%%
-title = Chris Crowell's Post
-url = https://www.linkedin.com/posts/chris-crowell-b065729_with-the-nem-30-re-proposal-finally-revealed-activity-6996867038493245440-SFR_?t={seek_to_second_number}
+match = -15.0%%
+title = Michael Didyk's Post
+url = https://www.linkedin.com/posts/didyk_how-nem-30-could-change-californias-clean-activity-7043436395138322432-9ijH
 
 [forums.maslowcnc.com]
 match = -85.2%%
