--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 05:39:07
+lastsearch = 2024-07-20 05:51:02
 
 [demtot.com]
 match = 4.8%%
-title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
-url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,14 +22,14 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -33.3%%
-title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
-url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
+match = -57.1%%
+title = Đệm lò xo 1m5x1m9 (150x190cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
 
 [maybedding.vn]
-match = 33.3%%
-title = Đệm lò xo Tuấn Anh Techwood 20cm
-url = https://maybedding.vn/products/dem-lo-xo-techwood
+match = 38.9%%
+title = Đệm lò xo Tuấn Anh
+url = https://maybedding.vn/collections/dem-lo-xo-tuan-anh
 
 [thegioidemtot.vn]
 match = 77.8%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -133.3%%
-title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
-url = https://lombom.com/dem-nem/page/2/
+match = -119.0%%
+title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
+url = https://lombom.com/dem-lo-xo/
 
 [www.linkedin.com]
 match = 4.8%%
