--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-20 04:49:18
+lastsearch = 2024-07-20 06:14:05
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -61.9%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
-match = -42.9%%
-title = Chieu truc thai lan hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu truc thai lan
+match = 42.9%%
+title = Mua Chiếu trúc hạt Thái Lan
+url = https://tiki.vn/chieu-truc-hat-thai-lan-p175549862.html
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -28.6%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-140x190cm-28.html
 
 [www.youtube.com]
 match = -138.1%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -95.2%%
-title = [ Hàng chuẩn ] Chiếu trúc Thái Lan hạt vàng 1m5 1m6 1m8 ...
-url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1m6-1m8-2m2-cao-cấp-hạt-hồ-lô-không-viền-i.114438421.7333602881
+match = 42.9%%
+title = Chiếu trúc Thái Lan. ẢNH THẬT
+url = https://shopee.vn/Chiếu-trúc-Thái-Lan.-ẢNH-THẬT-i.43560301.2026537257
 
 [baohungyen.vn]
 match = -4.8%%
@@ -580,4 +580,14 @@ url = https://baodongkhoi.vn/ap-thap-nhiet-doi-tren-bien-dong-giat-cap-8-di-chuy
 match = -100.0%%
 title = Loại chiếu trúc nào tốt nhất trên thị trường? - ĐỆM SÔNG HỒNG
 url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
+
+[dem24h.vn]
+match = 4.8%%
+title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
+url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
+
+[vongxepsaigon.vn]
+match = -81.0%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
