--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-19 19:27:44
+lastsearch = 2024-07-20 06:14:36
 
 [erado.vn]
 match = 5.0%%
@@ -12,9 +12,9 @@ title = Giường da hạng sang mã DV14
 url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [noithatami.com]
 match = -75.0%%
@@ -72,9 +72,9 @@ title = Thảm lông trải giường 1m x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm+lông+trải+giường+1m+x+2m
 
 [noithattamviet.net]
-match = -30.0%%
-title = Giường bọc nhung gỗ công nghiệp GB-14
-url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
+match = -10.0%%
+title = Giường ngủ gỗ công nghiệp GCN-14
+url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
 
 [nemphuoclong.vn]
 match = -55.0%%
