--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-20 04:46:57
+lastsearch = 2024-07-20 06:18:17
 
 [demxanh.com]
 match = 38.2%%
@@ -32,9 +32,9 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [suongtuyet.com]
-match = 2.9%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 17.6%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [russo.vn]
 match = -2.9%%
@@ -97,9 +97,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
-match = -5.9%%
-title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
+match = 2.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
 
 [ru9.vn]
 match = 8.8%%
