--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-20 05:35:11
+lastsearch = 2024-07-20 06:20:47
 
 [www.tui.co.uk]
-match = -80.0%%
-title = Marella Discovery 2 Itineraries
-url = https://www.tui.co.uk/cruise/ships/marella-discovery-2/itineraries
+match = -86.7%%
+title = Top things to do in Singapore | Discover
+url = https://www.tui.co.uk/discover/top-things-to-do-singapore
 
 [www.travelgossip.co.uk]
 match = 0.0%%
