--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-20 04:16:03
+lastsearch = 2024-07-20 06:29:07
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -205.9%%
-title = If an HOA in state does not enforce its rules for a certain ...
-url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
+match = -188.2%%
+title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
+url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -141.2%%
+title = anyone know how to find who the HOA president is? ...
+url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
 
 [spectrumam.com]
 match = -76.5%%
@@ -64,7 +64,7 @@ url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/faq/ccic-omb
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
+url = http://www.leg.state.fl.us/STATUTES/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.301.html
 
 [sofl.cooperatornews.com]
 match = -152.9%%
