--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-20 06:14:05
+lastsearch = 2024-07-20 06:44:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -61.9%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
-match = 42.9%%
-title = Mua Chiếu trúc hạt Thái Lan
-url = https://tiki.vn/chieu-truc-hat-thai-lan-p175549862.html
+match = -42.9%%
+title = Chieu truc thai lan hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -28.6%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 140x190cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-140x190cm-28.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -138.1%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = 42.9%%
-title = Chiếu trúc Thái Lan. ẢNH THẬT
-url = https://shopee.vn/Chiếu-trúc-Thái-Lan.-ẢNH-THẬT-i.43560301.2026537257
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
