--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-20 05:33:10
+lastsearch = 2024-07-20 06:46:23
 
 [www.lazada.vn]
 match = -166.7%%
@@ -92,9 +92,9 @@ title = Gối Vuông Tựa | Khonemtonghop.com
 url = https://khonemtonghop.com/goi-vuong-tua/
 
 [thocamtraby.com]
-match = -33.3%%
-title = set 3 vỏ gối vuông trơn màu cao cấp
-url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-tron-mau-cao-cap-VOGOI011
+match = -53.3%%
+title = set 3 vỏ gối vuông cổ điển chất nhung
+url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-co-dien-chat-nhung-VOGOI010
 
 [cobanmart.com]
 match = -106.7%%
