--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-20 04:13:14
+lastsearch = 2024-07-20 08:04:22
 
 [tiki.vn]
 match = -122.2%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -72.2%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
+match = -144.4%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
