--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-20 01:38:16
+lastsearch = 2024-07-20 08:00:07
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -12,8 +12,8 @@ title = Holiday Types 2024/25
 url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -42,9 +42,9 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -108.3%%
-title = Tui Manchester : r/flightradar24
-url = https://www.reddit.com/r/flightradar24/comments/1e6yt5g/tui_manchester/
+match = -333.3%%
+title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
