--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-20 05:49:32
+lastsearch = 2024-07-20 08:02:36
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.4%%
+title = Lien Claimants
+url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -126.3%%
-title = Tell Bennett, MD Professor, Biomedical Informatics
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/22381
+match = -163.2%%
+title = Robin Shandas, PhD Professor, University of Colorado - Denver
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
 
 [cpr.heart.org]
 match = -94.7%%
