CI images update

--- a/images/chieu-gap-dai-loan-120x190/config.ini
+++ b/images/chieu-gap-dai-loan-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-120x190.html
 lastopen = 2024-07-19 04:28:24
 
 [search]
-lastsearch = 2024-06-29 15:16:50
+lastsearch = 2024-07-20 09:37:17
 
 [demxanh.com]
 match = -23.1%%
@@ -12,9 +12,9 @@ title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
-match = -65.4%%
-title = Chiếu cói loại 1 gập đôi phong cách Đài Loan các loại kích ...
-url = https://shopee.vn/Chiếu-cói-loại-1-gập-đôi-phong-cách-Đài-Loan-các-loại-kích-thước-i.151475780.23671557246
+match = -46.2%%
+title = [Rẻ nhất Shopee] - Chiếu trúc hạt đen không viền
+url = https://shopee.vn/-Rẻ-nhất-Shopee-Chiếu-trúc-hạt-đen-không-viền-i.142932742.11103566495
 
 [dem24h.vn]
 match = 3.8%%
