--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-20 04:13:39
+lastsearch = 2024-07-20 09:38:13
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -17,19 +17,19 @@ title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
 url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
-match = -39.3%%
-title = Ga phủ giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/ga phủ giường
+match = 0.0%%
+title = Bộ chăn ga gối Cotton Poly Bo Decor Hồng Xám
+url = https://shopee.vn/Bộ-chăn-ga-gối-Cotton-Poly-Bo-Decor-Hồng-Xám-i.192059911.7103644436
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 14.3%%
-title = Bộ chăn ga gối Walt Disney mã DN19-011
-url = https://changagoidemsonghong.com/chan-ga-goi-dn19-011
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [flexhouse.vn]
 match = -17.9%%
