--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-20 08:01:32
+lastsearch = 2024-07-20 09:32:52
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+match = 4.3%%
+title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -470,4 +470,9 @@ url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam High Mobility an
 match = -108.7%%
 title = Tajik President's Demand For 'Respect' From Putin Viewed ...
 url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.html
+
+[twitter.com]
+match = -58.3%%
+title = Ifang Bremer
+url = https://twitter.com/IfangBremer/status/1801089320365031905
 
