--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-20 06:20:02
+lastsearch = 2024-07-20 09:37:50
 
 [erado.vn]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Váy Giường Nữ Hoàng 18 Inch Thả
 url = https://vietnamese.alibaba.com/g/bed-skirts-queen-18-inch-drop.html
 
 [noithattana.vn]
-match = -140.0%%
-title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
-url = https://noithattana.vn/giuong-tu-tan-co-dien/
+match = -75.0%%
+title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
+url = https://noithattana.vn/giuong-ngu/
 
 [tiki.vn]
 match = -75.0%%
