--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-20 08:00:07
+lastsearch = 2024-07-20 09:35:00
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -325.0%%
-title = Tour giant TUI expects bright summer despite higher prices
-url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
+match = -316.7%%
+title = TUI Travel sees strong 2014 as customers spend more on ...
+url = https://www.reuters.com/article/world/tui-travel-sees-strong-2014-as-customers-spend-more-on-foreign-holidays-idUSBRE9B90FS/
 
 [www.mybaggage.com]
 match = -116.7%%
