CI images update

--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-20 02:18:09
+lastsearch = 2024-07-20 10:20:52
 
 [dvan.org]
 match = -41.7%%
@@ -180,4 +180,14 @@ url = https://www.doe.gov.in/
 match = -300.0%%
 title = Home | Department of Social Justice and Empowerment ...
 url = https://socialjustice.gov.in/
+
+[www.youtube.com]
+match = -333.3%%
+title = Rick Astley - Never Gonna Give You Up (Official Music Video)
+url = https://www.youtube.com/watch?v=dQw4w9WgXcQ
+
+[dbtindia.gov.in]
+match = -308.3%%
+title = Welcome to Department of Biotechnology | Department of ...
+url = https://dbtindia.gov.in/
 
