--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-20 04:25:53
+lastsearch = 2024-07-20 10:22:55
 
 [www.tiktok.com]
-match = -11.8%%
-title = HOA fined me for this #hoa
-url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
+match = -170.6%%
+title = We costed our HOA 16%% of their ANNUAL income over a ...
+url = https://www.tiktok.com/@brainofreddit/video/7279632275313069358
 
 [casetext.com]
 match = -100.0%%
@@ -68,8 +68,8 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
 match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmSww_2H&sig=ACfU3U3qscBj41UJ6Du5FWPz7pzXyaBc_Q&hl=en&sa=X&ved=2ahUKEwj-0OG4hbSHAxVvlYkEHWt_DQUQ6AF6BAhKEAM
+title = The New Annual Army List, Militia List, and Yeomanry Cavalry ...
+url = https://books.google.com/books?id=py0dAQAAIAAJ&pg=PA25&lpg=PA25&dq=man+in+hoa+dep+16&source=bl&ots=wAgQl_hohB&sig=ACfU3U1QSihHRc_D7x2UOwL0n2zvP-pOrQ&hl=en&sa=X&ved=2ahUKEwjLjryf1bSHAxW6MlkFHeLaDTcQ6AF6BAgZEAM
 
 [tax.vermont.gov]
 match = -29.4%%
