--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-20 09:32:29
+lastsearch = 2024-07-20 10:16:53
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -52.4%%
@@ -185,4 +185,9 @@ url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 match = -104.8%%
 title = Giường Ngủ Đẹp Cao Cấp Giá Rẻ -20-60%% + Quà (7/2024)
 url = https://noithatdogoviet.com/giuong-ngu
+
+[smlife.vn]
+match = -81.0%%
+title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
 
