--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-20 09:35:20
+lastsearch = 2024-07-20 10:20:21
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -46.7%%
-title = Dog Lovers Ho Chi Minh City
-url = https://www.facebook.com/groups/1522115054746349/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -330,4 +330,9 @@ url = https://files.customs.gov.vn/CustomsCMS/TONG_CUC/2022/1/7/252DSsoitruocTon
 match = -40.0%%
 title = Tra cứu đối tượng truy nã
 url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
+
+[forums.d2jsp.org]
+match = -20.0%%
+title = 08 Arreats Ft - Topic
+url = https://forums.d2jsp.org/topic.php?t=83506164&f=358
 
