--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-20 02:24:25
+lastsearch = 2024-07-20 10:20:43
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/nhựa
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -52,9 +52,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [www.lazada.vn]
-match = 10.0%%
-title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://www.lazada.vn/products/chieu-nhua-mai-huyen-ha-noi-15m-16m-1m81m8x3m-1m8x4m-i1969285387.html
 
 [thuanloitrading.com]
 match = 10.0%%
@@ -85,4 +85,14 @@ url = https://www.hotdeal.vn/ha-noi/do-dung-gia-dinh-nha-cua-doi-song/chieu-nhua
 match = -10.0%%
 title = Báo giá dây thít nhựa tại Hà Nội
 url = http://denchieusangre.com/Day-thit-nhua/Bao-gia-day-thit-nhua-tai-Ha-Noi.htm
+
+[m.facebook.com]
+match = -20.0%%
+title = Chiếu nhựa ( đơn + gấp) Made in Viêt Nam
+url = https://m.facebook.com/media/set/?set=a.774846209209040.1073741830.763563843670610&type=1
+
+[vindec.com.vn]
+match = -100.0%%
+title = Plastic Check Valves | Van 1 Chiều Nhựa PVC-UPVC ...
+url = https://vindec.com.vn/van-1-chieu-nhua
 
