--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-20 03:19:07
+lastsearch = 2024-07-20 10:16:07
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -523,8 +523,8 @@ url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--360-jed8
 
 [clinton.presidentiallibraries.us]
 match = -139.1%%
-title = https://clinton.presidentiallibraries.us/items/show/47303 ...
-url = https://clinton.presidentiallibraries.us/items/show/47303?output=omeka-xml
+title = https://clinton.presidentiallibraries.us/items/show/39407 ...
+url = https://clinton.presidentiallibraries.us/items/show/39407?output=omeka-xml
 
 [www.amazon.com]
 match = -30.4%%
@@ -575,4 +575,14 @@ url = https://panochada.com/2020/08/27/northern-limit-line-south-korea/
 match = -108.7%%
 title = Tajik President's Demand For 'Respect' From Putin Viewed ...
 url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.html
+
+[archive.registrar.ufl.edu]
+match = -104.3%%
+title = Description of Courses - Registrar - University of Florida
+url = https://archive.registrar.ufl.edu/catalog/catalogarchive/99-00-catalog/courses/26_Course Descriptions 2.html
+
+[www.pfp-consortium.org]
+match = -72.7%%
+title = Exiting war
+url = https://www.pfp-consortium.org/media/271/download
 
