--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-20 10:18:01
+lastsearch = 2024-07-20 10:38:53
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -110,4 +110,9 @@ url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-ch
 match = -100.0%%
 title = Bộ Chăn Ga Gối Gấm 4 món nhập khẩu cao cấp hoạ tiết in ...
 url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-gam-4-mon-nhap-khau-cao-cap-hoa-tiet-in-hoa-ma-02/
+
+[scandalinen.vn]
+match = -47.6%%
+title = Bộ Chăn Ga Gối Linen Pháp Nhuộm Miếng Cam Đỏ F18
+url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-mieng-cam-do-f18/
 
