--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-20 09:49:25
+lastsearch = 2024-07-20 10:34:51
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -32,9 +32,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [thangnhomdongtam.com]
-match = -81.0%%
-title = Thang nhôm gấp 4 khúc THM4 LD Đài Loan - Hàng Cao cấp
-url = https://thangnhomdongtam.com/san-pham/thang-nhom-chu-m-cao-cap-hang-lien-doanh-dai-loan-thm4-can-nang-16-kg
+match = -109.5%%
+title = Thang nhôm gấp 4 khúc TMH3D LD Đài Loan - Cao cấp - Giá tốt
+url = https://thangnhomdongtam.com/san-pham/thang-nhom-gap-4-khuc-chu-m-hang-lien-doanh-dai-loan-tmh3d
 
 [thangnhomnhapkhau.com]
 match = -47.6%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -95.2%%
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [cau-ca.com]
 match = -42.9%%
