--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-20 03:21:02
+lastsearch = 2024-07-20 10:35:37
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -410,4 +410,14 @@ url = https://www.sec.gov.ph/
 match = -175.0%%
 title = The Official Home Page of the Eighth Army - Eighth Army | The ...
 url = https://8tharmy.korea.army.mil/site/index.asp
+
+[www.google.com]
+match = 0.0%%
+title = 
+url = https://www.google.com/search?sca_esv=e3a2dde4b697e1cd&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjbiaGL2LSHAxWBFFkFHUsoBDcQsZYEegQIJRAC
+
+[www.outlookindia.com]
+match = -170.0%%
+title = Outlook India - India's Best Magazine| Find Latest News, Top ...
+url = https://www.outlookindia.com/
 
