CI images update

--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-20 11:20:55
+lastsearch = 2024-07-20 12:31:43
 
 [www.kymdan.com]
 match = 4.2%%
@@ -27,9 +27,9 @@ title = bộ ga everon esbm 21016
 url = https://yeshomebedding.com/bo-chun-chan-everon-esbm-21016-modal
 
 [www.lazada.vn]
-match = -15.6%%
-title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html
+match = -12.5%%
+title = Bộ ga chun chần Kim Cương 5 món chất liệu Tencel 1 màu ...
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-5-mon-chat-lieu-tencel-1-mau-thoang-mat-kich-thuoc-160x200-180x200cm-i2419505053.html
 
 [shopee.vn]
 match = -21.9%%
