--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-20 11:44:44
+lastsearch = 2024-07-20 12:35:23
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
 match = -22.2%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -66.7%%
-title = Bản tin sáng 19/7: Thái Lan phát hiện bằng chứng mới vụ ...
-url = https://www.youtube.com/watch?v=mtafFcc3uPk
+match = -74.1%%
+title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
+url = https://www.youtube.com/watch?v=zGtjB2l6au4
 
 [www.diepxuan.com]
 match = 22.2%%
