CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-20 11:20:43
+lastsearch = 2024-07-20 12:51:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -231.2%%
@@ -72,9 +72,9 @@ title = Bộ ngoại giao thông tin về việc điều tra, hậu sự nhóm n
 url = https://www.youtube.com/watch?v=rUGm2ZH8ccc
 
 [books.google.com]
-match = -250.0%%
-title = Tứ Phần Luật - Tập II (Phần III, IV): {Phát hành phi lợi nhuận}
-url = https://books.google.com/books?id=gj3JEAAAQBAJ&pg=PA1131&lpg=PA1131&dq=chieu+lac+soc+16&source=bl&ots=_oePs6-Oal&sig=ACfU3U2xvea4osbzUIFmW2GR0PFBONt7NQ&hl=en&sa=X&ved=2ahUKEwia3r6V4rSHAxUJL0QIHbw1CYkQ6AF6BAgbEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EgC9Au4&sig=ACfU3U26ECMO-sxmSC6JF4NrUO-JwkNtqQ&hl=en&sa=X&ved=2ahUKEwihjuTG9rSHAxUmLFkFHbMNCzkQ6AF6BAghEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
