--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-20 11:36:04
+lastsearch = 2024-07-20 12:50:27
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -14.8%%
+title = Chiếu điều hòa (không kèm vỏ gối) sợi mây 2 lớp chất ...
+url = https://shopee.vn/Chiếu-điều-hòa-(không-kèm-vỏ-gối)-sợi-mây-2-lớp-chất-lượng-cao-Minh-Nhật-–-Sang-trọng-mềm-mại-thoáng-mát-i.319365577.9030851250
 
 [demxanh.com]
 match = 14.8%%
