--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-20 12:17:30
+lastsearch = 2024-07-20 12:47:59
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,8 +57,8 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
+match = 0.0%%
+title = PHOTOTIMEVietnam
 url = https://www.facebook.com/phototimevn/
 
 [lacvietauction.vn]
