--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-20 05:45:55
+lastsearch = 2024-07-20 12:52:40
 
 [www.lazada.vn]
 match = -55.6%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -200.0%%
-title = Crometta S, Shower system 240 1jet with single lever mixer ...
-url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [www.sciencedirect.com]
 match = -150.0%%
