CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-20 10:19:35
+lastsearch = 2024-07-20 13:41:48
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,8 +12,8 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
+match = -23.1%%
+title = Coco Chan (@cocopops072)
 url = https://www.instagram.com/cocopops072/?hl=en
 
 [www.solunafineart.com]
@@ -22,9 +22,9 @@ title = Once Upon
 url = https://www.solunafineart.com/once-upon
 
 [en.wikipedia.org]
-match = -25.0%%
-title = Coco Lee
-url = https://en.wikipedia.org/wiki/Coco_Lee
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
 match = -246.2%%
@@ -52,9 +52,9 @@ title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
-match = -153.8%%
-title = 5 Made-in-Vietnam Artisan Chocolate Brands
-url = https://jovelchan.com/blog/five-made-in-vietnam-artisan-chocolate-brands
+match = -238.5%%
+title = How The Cocoa Project is changing the narrative ...
+url = https://jovelchan.com/blog/the-cocoa-project-changing-narrative-chocolate-vietnam
 
 [sourcing.hktdc.com]
 match = -115.4%%
