--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-07-20 10:37:48
+lastsearch = 2024-07-20 13:40:30
 
 [www.diepxuan.com]
 match = -16.7%%
@@ -22,9 +22,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B077S3WNR3
 
 [www.talkbass.com]
-match = -95.8%%
-title = Best 2x15 setup you've found...preferably pair of 1x15's
-url = https://www.talkbass.com/threads/best-2x15-setup-youve-found-preferably-pair-of-1x15s.1183155/page-3
+match = -70.8%%
+title = Accugroove Tri 112L v Epi NYC 410 v Epi UL310 ...
+url = https://www.talkbass.com/threads/accugroove-tri-112l-v-epi-nyc-410-v-epi-ul310-v-sadowsky-sa410.302104/
 
 [www.theflyfishingforum.com]
 match = -4.2%%
@@ -45,4 +45,14 @@ url = https://www.audioasylum.com/cgi/t.mpl?f=speakers&m=300550
 match = -25.0%%
 title = American Gear Guide - Home sweet ...
 url = https://www.facebook.com/americangearguide/photos/home-sweet-homeim-testing-out-some-new-american-made-winter-clothing-from-nwt3k-/990389397833514/
+
+[naxja.org]
+match = 4.2%%
+title = 90 4,0 liter going warm.
+url = https://naxja.org/threads/90-4-0-liter-going-warm.15379/
+
+[www.apneaboard.com]
+match = -25.0%%
+title = Dreamwear nasal mask vs new N30 . WOW
+url = https://www.apneaboard.com/forums/Thread-Dreamwear-nasal-mask-vs-new-N30-WOW
 
