--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-20 04:28:09
+lastsearch = 2024-07-20 13:38:50
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 25.8%%
+title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC24 102
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
+match = 48.0%%
+title = Bộ chăn ga gối SH_H19 069
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -19.4%%
-title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
-url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
+match = -22.6%%
+title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
+url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
 
 [www.facebook.com]
 match = -6.5%%
@@ -175,4 +175,9 @@ url = http://www.digifind-it.com/westfield/leader/1962/1962-10-18.pdf
 match = 48.0%%
 title = Bộ chăn ga gối SH_H18 060
 url = https://bachhoadem.vn/san-pham/bo-chan-ga-goi-sh-h18-060
+
+[hanvico.com.vn]
+match = 7.4%%
+title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
+url = https://hanvico.com.vn/
 
