--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-20 09:04:40
+lastsearch = 2024-07-20 13:42:10
 
 [bedding.vn]
 match = -123.1%%
@@ -292,9 +292,9 @@ title = Catherine Ceniza Choy - U.C. Berkeley Ethnic Studies
 url = https://ethnicstudies.berkeley.edu/people/catherine-ceniza-choy/
 
 [gohuskies.com]
-match = -192.3%%
-title = Washington Names Jessa Hansen Parker Head ...
-url = https://gohuskies.com/news/2024/7/2/washington-names-jessa-hansen-parker-head-gymnastics-coach.aspx
+match = -330.8%%
+title = University of Washington Athletics - Official Athletics Website
+url = https://gohuskies.com/
 
 [profiles.ucdavis.edu]
 match = -7.7%%
@@ -360,4 +360,9 @@ url = https://www.sjsu.edu/
 match = -315.4%%
 title = News » Dr. Zhoumeng Lin's Lab » College of Public Health ...
 url = https://linlab.phhp.ufl.edu/news/
+
+[www.google.com]
+match = 0.0%%
+title = 
+url = https://www.google.com/search?sca_esv=82aa2a2e266d6057&sca_upv=1&q=What+type+of+school+is+SJSU?&sa=X&ved=2ahUKEwjejJbkgbWHAxVgv4kEHRskBswQsZYEegQIGhAC
 
