--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-20 03:37:43
+lastsearch = 2024-07-20 13:43:15
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC2xisyA&sig=ACfU3U19tBKbem3SjETsxTkcYQpv0yhjlQ&hl=en&sa=X&ved=2ahUKEwim1vHW-rOHAxUTGTQIHSHND70Q6AF6BAgcEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC2AovBC&sig=ACfU3U3bZgdBgkvDXcMmiJpTCaHU4POwrg&hl=en&sa=X&ved=2ahUKEwiQx6-DgrWHAxUnv4kEHbdsAuMQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
