--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 11:44:14
+lastsearch = 2024-07-20 13:35:51
 
 [demtot.com]
 match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
+url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
 
 [tuananh.vn]
 match = 52.4%%
