CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-20 11:17:26
+lastsearch = 2024-07-20 13:45:37
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -17,9 +17,9 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = 22.2%%
-title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
+url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tiki.vn]
 match = 11.1%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = -11.1%%
-title = Chân dung chuyên gia trang điểm người Việt ...
-url = https://m.facebook.com/groups/572348384121798/posts/1258002742223022/
+match = -22.2%%
+title = TOUR DU LỊCH GIÁ RẺ | 🚆🛤️𝐕𝐈 𝐕𝐔 Đ𝐀̀ 𝐍𝐀̆̀𝐍𝐆 𝐃𝐈̣𝐏 ...
+url = https://m.facebook.com/groups/haratours.vn/posts/2780224462135077/
 
 [vietbao.com]
 match = -59.3%%
@@ -205,4 +205,24 @@ url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 match = -18.5%%
 title = Huýt sáo vào ban đêm cũng là điều "cấm kỵ"
 url = https://cafef.vn/nhung-dieu-du-khach-tuyet-doi-khong-nen-lam-khi-toi-thai-lan-huyt-sao-vao-ban-dem-cung-la-dieu-cam-ky-18824071819333533.chn
+
+[chiaki.vn]
+match = -33.3%%
+title = Chăn nhung tuyết lông thỏ Blanket nội địa Trung, Xanh lam
+url = https://chiaki.vn/chan-tuyet-nhung-long-tho-blanket-noi-dia-trung
+
+[budget.hawaii.gov]
+match = 20.0%%
+title = CITY & COUNTY OF HONOLULU
+url = https://budget.hawaii.gov/wp-content/uploads/2013/01/City-County-of-Honolulu-A-L.pdf
+
+[journals.asm.org]
+match = -77.8%%
+title = SARS-CoV-2 Antiviral Therapy | Clinical Microbiology Reviews
+url = https://journals.asm.org/doi/full/10.1128/CMR.00109-21?af=R
+
+[www.pmo.gov.sg]
+match = -33.3%%
+title = GOVERNMENT GAZETTE
+url = https://www.pmo.gov.sg/National-Awards/-/media/8CCC48F241604DA2881E012145AB142F.ashx
 
