--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-20 11:38:01
+lastsearch = 2024-07-20 13:46:52
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWc6V0M&sig=ACfU3U2fyae3i7jZVt8R8fSEOfTFsM-j2w&hl=en&sa=X&ved=2ahUKEwiI2MGlw7SHAxUwFlkFHVTnCTgQ6AF6BAglEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqWdeMYJ&sig=ACfU3U1JuwYMonPt_nSPOobZFH269edAyg&hl=en&sa=X&ved=2ahUKEwiL1ubqgrWHAxXiMlkFHWrOBDgQ6AF6BAgkEAM
 
 [www.travelweekly.com]
 match = -87.0%%
