--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-20 11:24:01
+lastsearch = 2024-07-20 13:53:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -655,4 +655,9 @@ url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
 match = -54.5%%
 title = Nevada Medicaid Recipients Employed by ...
 url = https://www.leg.state.nv.us/Division/Research/Documents/RTTL_NRS422.27482_2022.pdf
+
+[pubs.usgs.gov]
+match = -63.6%%
+title = GILPIN COUNTY AND ADJACENT PARTS OF CLEAR ...
+url = https://pubs.usgs.gov/pp/0094/report.pdf
 
