--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-20 12:18:03
+lastsearch = 2024-07-20 13:47:04
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -17,14 +17,14 @@ title = Hoi Chan Studio
 url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
-match = -307.7%%
-title = Hoi Chan draws on scientific illustrations to create 'muted ...
+match = -253.8%%
+title = Hoi Chan draws on scientific illustrations to create ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 33.3%%
-title = Yuk Hoi Chan
-url = https://www.facebook.com/hoihihoi/
+match = 7.7%%
+title = Yuki-Chan Cosplay
+url = https://www.facebook.com/YukiChansp/
 
 [happypaca.tumblr.com]
 match = -276.9%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
