--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-20 02:11:16
+lastsearch = 2024-07-20 13:51:18
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,13 +17,13 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -250.0%%
-title = TUI brand name may no longer be used by TUI Russia
-url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
+url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
-match = -300.0%%
-title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - TUI
+match = -316.7%%
+title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - Japan
 url = https://www.tui.nl/16-dg-cruise-azie-noordam-519967721/
 
 [embraer.com]
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
