--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-20 14:14:15
+lastsearch = 2024-07-20 14:26:41
 
 [www.diepxuan.com]
 match = 14.3%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
 match = -161.9%%
@@ -82,9 +82,9 @@ title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VIS
 url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -9.5%%
-title = Phim Mai Có Chiếu Ở Taiwan Không
-url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
+match = -104.8%%
+title = Phim MAI 14/2 chiếu tại Đài Loan m.n có Địa Chỉ Rạp chưa ...
+url = https://www.tiktok.com/@anhvuphunxamtaiwan/video/7349143704650681606?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
