--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-20 12:34:06
+lastsearch = 2024-07-20 14:28:45
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -6.2%%
-title = Peri Pool Arena Hà Nội
-url = https://m.facebook.com/100094275258198/photos/341156062370233/
+match = -212.5%%
+title = trở lại từ sau kỳ nghỉ EWC, các ứng cử viên vô địch sẽ tiếp
+url = https://m.facebook.com/lolnetizenvtrans/photos/chiều-nay-xem-trận-nàohiện-tại-chưa-có-thông-báo-chính-thức-từ-vcs-nên-admin-vẫn/968678178390020/
 
 [baomoi.com]
 match = -193.8%%
