--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-20 12:51:44
+lastsearch = 2024-07-20 14:29:48
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
-match = -209.1%%
-title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
-url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
+match = -372.7%%
+title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -227.3%%
+title = Ghế da chân quỳ TFMQD56 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-chan-quy-tfmqd56
 
 [dandoxe.com]
 match = -154.5%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = -318.2%%
-title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
-url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
+match = 18.2%%
+title = Bọc ghế da ô tô
+url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
 
 [github.com]
 match = -81.8%%
@@ -132,9 +132,9 @@ title = Ghế da văn phòng
 url = https://noithatthienminh.vn/ghe-da-van-phong/
 
 [akauto.com.vn]
-match = -245.5%%
-title = Bọc Ghế Da Ô Tô Xpander - Da cao cấp - AKauto
-url = https://akauto.com.vn/boc-ghe-da-o-to-xpander
+match = -63.6%%
+title = Bọc ghế da ô tô Mercedes
+url = https://akauto.com.vn/boc-ghe-da-o-to-mercedes
 
 [www.theguardian.com]
 match = -254.5%%
@@ -160,4 +160,9 @@ url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
 match = -81.8%%
 title = Bọc ghế da ô tô Long Xuyên
 url = https://otohayauto.vn/boc-ghe-da-o-to-long-xuyen/
+
+[liqui-moly.vn]
+match = -90.9%%
+title = VỆ SINH GHẾ DA NỈ VẢI - 1539
+url = https://liqui-moly.vn/ve-sinh-ghe-da-ni-vai-1539
 
