CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-20 05:38:55
+lastsearch = 2024-07-20 15:34:13
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -175.0%%
-title = NA99 - Nơi Hội Tụ Các Đại Gia | 𝐄𝐦 𝐭𝐡𝐚̂́𝐲 𝐠𝐢̀ 𝐤𝐡𝐢 𝐛𝐮𝐨̂̉𝐢 ...
-url = https://m.facebook.com/groups/dola88.official/posts/1440155476634990/
+match = -212.5%%
+title = trở lại từ sau kỳ nghỉ EWC, các ứng cử viên vô địch sẽ tiếp
+url = https://m.facebook.com/lolnetizenvtrans/photos/chiều-nay-xem-trận-nàohiện-tại-chưa-có-thông-báo-chính-thức-từ-vcs-nên-admin-vẫn/968678178390020/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -535,4 +535,14 @@ url = https://www.baobaclieu.vn/doi-song-xa-hoi/nhung-nguoi-tho-cua-nghe-truyen-
 match = -143.8%%
 title = Huyện Kim Bôi: Bé gái 9 tuổi bị nước cuốn trôi
 url = http://www.baohoabinh.com.vn/274/191322/Huyen-Kim-Boi-Be-gai-9-tuoi-bi-nuoc-cuon-troi.htm
+
+[caobangtv.vn]
+match = -187.5%%
+title = Đảng viên, nhân dân quê hương Đông Anh tiếc thương ...
+url = http://caobangtv.vn/tin-tuc-n75200/dang-vien-nhan-dan-que-huong-dong-anh-tiec-thuong-nho-ve-tong-bi-thu-nguyen-phu-trong.html
+
+[langsontv.vn]
+match = -193.8%%
+title = Nadal tiến vào bán kết Nordea Open sau trận đấu 4 tiếng
+url = https://langsontv.vn/news/488/72906/nadal-tien-vao-ban-ket-nordea-open-sau-tran-dau-4-tieng
 
