--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-20 11:48:23
+lastsearch = 2024-07-20 15:35:47
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -250.0%%
-title = Tập Thơ Truyện Hồn Lang Về Cõi Thế - Page 18 - Google Books Result
-url = https://books.google.com/books?id=ePhiEAAAQBAJ&pg=PA18&lpg=PA18&dq=chieu+lac+soc+18&source=bl&ots=lke4yYHnqp&sig=ACfU3U1JKOrCkAhkWRRzEohDy2U8lJ3rOw&hl=en&sa=X&ved=2ahUKEwio8IWt6LSHAxUtrYkEHTCNDxIQ6AF6BAgaEAM
+match = -218.8%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6UVcCUm&sig=ACfU3U1-HIL5pMhT9HlPch4CsxpQZ5_gIg&hl=en&sa=X&ved=2ahUKEwjH9PCWm7WHAxXwEUQIHVdXAiQQ6AF6BAgfEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
