--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-20 05:32:26
+lastsearch = 2024-07-20 15:35:07
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = -70.0%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
 
 [tchome.vn]
 match = 20.0%%
@@ -37,9 +37,9 @@ title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nộ
 url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
 
 [www.sendo.vn]
-match = -35.0%%
-title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
-url = https://www.sendo.vn/chieu-nhua.htm
+match = -75.0%%
+title = Chiếu Nhựa 1M2 Hàng Xịn, Rẻ Nhất, Thanh Toán Khi Nhận
+url = https://www.sendo.vn/chieu-nhua-1m2.htm
 
 [www.facebook.com]
 match = -5.0%%
