--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-20 11:50:00
+lastsearch = 2024-07-20 15:37:29
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Bảng giá khuyến mại đệm lò xo Victoria chất lượng cao!
-url = https://sieuthidemonline.vn/dem-lo-xo-victoria/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [tuananh.vn]
 match = 52.4%%
