--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-20 15:32:23
+lastsearch = 2024-07-20 15:43:58
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -212.5%%
-title = Tâm sự số 804 🌈 Tính cảnh cáo tiểu tam ai ngờ được tiểu tam ...
-url = https://www.youtube.com/watch?v=gAxoR-MNbkM
+match = -231.2%%
+title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
+url = https://www.youtube.com/watch?v=94lvutN9mUA
 
 [tuyensinh247.com]
 match = -225.0%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -181.2%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = -18.8%%
+title = Chiếu lác thiên nhiên : 1m6 .1m8
+url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.thegioididong.com]
 match = -181.2%%
