--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-20 15:34:13
+lastsearch = 2024-07-20 15:47:47
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -212.5%%
-title = Tâm sự số 804 🌈 Tính cảnh cáo tiểu tam ai ngờ được tiểu tam ...
-url = https://www.youtube.com/watch?v=gAxoR-MNbkM
+match = -231.2%%
+title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
+url = https://www.youtube.com/watch?v=94lvutN9mUA
 
 [hawater.com.vn]
 match = -75.0%%
