--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-20 12:14:08
+lastsearch = 2024-07-20 15:44:10
 
 [everon.online]
 match = -7.4%%
@@ -12,14 +12,14 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
+match = -59.3%%
+title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) ...
+url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
 
 [tongdailyeveron.com.vn]
-match = -5.3%%
-title = Bộ Chăn Ga Giảm Giá
-url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
+match = 29.6%%
+title = Bộ ga phủ 180*200 EPM 20069
+url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
 
 [demxanh.com]
 match = -7.4%%
@@ -28,13 +28,13 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = 25.9%%
+title = Bộ chăn ga everon EPT -21045
+url = https://everonhn.com.vn/bo-chan-ga-everon-ept-21045
 
 [everon.net.vn]
 match = -18.5%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
 url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPT-21045
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -44.4%%
