CI images update

--- a/images/nem-dreamland-uc-180x200x14/config.ini
+++ b/images/nem-dreamland-uc-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
 lastopen = 2024-06-06 16:44:35
 
 [search]
-lastsearch = 2024-07-20 04:27:26
+lastsearch = 2024-07-20 16:16:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Dreamland
 url = https://www.michaelmarkowski.com/music/dreamland/
 
 [www.amazon.com]
-match = -85.2%%
-title = So far so good.. just concerned with the gel, over time.
-url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B01N2UDS59?physicalId=61gnxFQ1kLL&imageExtension=jpg&reviewId=R3IPB6FJOG69LM
+match = -33.3%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [forum.mattressunderground.com]
 match = -18.5%%
