--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-20 15:47:06
+lastsearch = 2024-07-20 16:13:44
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
 match = -131.6%%
