--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-20 16:14:37
+lastsearch = 2024-07-20 16:28:03
 
 [demxanh.com]
 match = 27.6%%
@@ -18,8 +18,8 @@ url = https://leflair.com/en/shop/bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-1637
 
 [www.lazada.vn]
 match = -17.2%%
-title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [tiki.vn]
 match = 20.7%%
