--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-20 13:52:00
+lastsearch = 2024-07-20 16:31:11
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=rUGm2ZH8ccc
 [books.google.com]
 match = -150.0%%
 title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EgCdwv-&sig=ACfU3U0vayMEG0WDu8wqhJtCYlxyHmf-1A&hl=en&sa=X&ved=2ahUKEwin1OH9g7WHAxUOFVkFHZPeBDUQ6AF6BAgcEAM
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EgDcBA0&sig=ACfU3U0lkY9-pERkRYitNPKh68TdiuQF1g&hl=en&sa=X&ved=2ahUKEwj15P_Hp7WHAxW5nokEHcXbBhMQ6AF6BAggEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
