--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-20 14:27:35
+lastsearch = 2024-07-20 16:32:39
 
 [xoptraisan.info]
 match = -147.4%%
@@ -17,9 +17,9 @@ title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
 url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
-match = 5.3%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 26.3%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
@@ -27,9 +27,9 @@ title = Thảm xốp – THAMHT.VN
 url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
-match = -121.1%%
-title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm xốp/trải sàn
+match = -94.7%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [thamtretho.com]
 match = 37.5%%
