--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-20 10:36:46
+lastsearch = 2024-07-20 16:32:28
 
 [www.lazada.vn]
-match = -166.7%%
-title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
-url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
+match = -26.7%%
+title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/vo-goi-om-vuong/
 
 [shopee.vn]
-match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+match = -166.7%%
+title = Vỏ Gối Tựa Vuông, Gối Tựa Sofa, Gối Tựa Lưng Nhung ...
+url = https://shopee.vn/Vỏ-Gối-Tựa-Vuông-Gối-Tựa-Sofa-Gối-Tựa-Lưng-Nhung-Trơn-2-Mặt-Siêu-Bền-i.29215914.10516331485
 
 [jysk.vn]
 match = -166.7%%
@@ -92,9 +92,9 @@ title = Gối Vuông Tựa | Khonemtonghop.com
 url = https://khonemtonghop.com/goi-vuong-tua/
 
 [thocamtraby.com]
-match = -53.3%%
-title = set 3 vỏ gối vuông cổ điển chất nhung
-url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-co-dien-chat-nhung-VOGOI010
+match = -33.3%%
+title = set 3 vỏ gối vuông trơn màu cao cấp
+url = https://thocamtraby.com/product/details/set-3-vo-goi-vuong-tron-mau-cao-cap-VOGOI011
 
 [cobanmart.com]
 match = -106.7%%
