--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-20 11:52:34
+lastsearch = 2024-07-20 16:45:05
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -40.0%%
-title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
-url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfS3_l7Tg&sig=ACfU3U15gPb6xz_OWzE0Z7edgb-KXpq1dw&hl=en&sa=X&ved=2ahUKEwjn6_fN27OHAxUDFlkFHX0qCjYQ6AF6BAgZEAM
+match = -96.0%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=KcLrK3BT-b&sig=ACfU3U2tT7IM8hiZ1GH852mihZ-yX3L3rg&hl=en&sa=X&ved=2ahUKEwjeoLDVqrWHAxW2GlkFHRtGAzgQ6AF6BAgbEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
