--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-20 14:45:09
+lastsearch = 2024-07-20 16:46:22
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -335,4 +335,9 @@ url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
 match = -20.0%%
 title = 08 Arreats Ft - Topic
 url = https://forums.d2jsp.org/topic.php?t=83506164&f=358
+
+[xoilaczvi.tv]
+match = -206.7%%
+title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
+url = https://xoilaczvi.tv/
 
