--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-20 14:25:03
+lastsearch = 2024-07-20 16:45:40
 
 [demdreamland.vn]
-match = 27.9%%
-title = Lưu trữ ĐỆM CAO SU DREAMLAND - demdreamland
-url = https://demdreamland.vn/dem-cao-su-dreamland/
+match = 25.6%%
+title = Đệm cao su nhập khẩu Dreamland Natural Latex
+url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
 match = 16.3%%
